--- a/index.html
+++ b/index.html
@@ -85,103 +85,105 @@
                     </div>
                 </div>
                 <!-- contenitore pagina piccolo 1000px -->
-                <div class="flex main-structure">
+                <div class="main-structure">
                     <!-- 1box main /    MAIN FIRST SESSION-->
-                    <div class="box-33">
-                        <div  class="offer">
-                            <h5><i class="fa-solid fa-user"></i> Singolo</h5>
-                        </div>
-                        <div class="offer-information">
-                            <div>
-                                <h4>Professional</h4>
-                                <small>€ 12.00</small>
-                                <small>/mese</small>
+                    <div class="flex">
+                        <div class="box-33">
+                            <div  class="offer">
+                                <h5><i class="fa-solid fa-user"></i> Singolo</h5>
                             </div>
-                            <div>
-                                <ul>
-                                    <li><span><i class="fa-solid fa-user"></span></i> 1 utente</li>
-                                    <li><span><i class="fa-solid fa-folder"></span></i> 5 TB di spazio di archiviazione sicuro</li>
-                                    <li><span><i class="fa-solid fa-share-nodes"></span></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
-                                </ul>
+                            <div class="offer-information">
+                                <div>
+                                    <h4>Professional</h4>
+                                    <small>€ 12.00</small>
+                                    <small>/mese</small>
+                                </div>
+                                <div>
+                                    <ul>
+                                        <li><span><i class="fa-solid fa-user"></span></i> 1 utente</li>
+                                        <li><span><i class="fa-solid fa-folder"></span></i> 5 TB di spazio di archiviazione sicuro</li>
+                                        <li><span><i class="fa-solid fa-share-nodes"></span></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
+                                    </ul>
+                                </div>  
+                                <div>
+                                    <button>Prova gratis per 30 giorni</button>
+                                    <p>oppure <a href="#">acquista ora</a></p>
+                                </div>
+                                <div>
+                                    <h6>Punti Salienti del piano</h6>
+                                    <ul>
+                                        <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> invia file fino a 100GB con Dropbox Transfert</li>
+                                        <li><span><i id="down-arrow"class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
+                                    </ul>
+                                </div>
                             </div>  
-                            <div>
-                                <button>Prova gratis per 30 giorni</button>
-                                <p>oppure <a href="#">acquista ora</a></p>
-                            </div>
-                            <div>
-                                <h6>Punti Salienti del piano</h6>
-                                <ul>
-                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> invia file fino a 100GB con Dropbox Transfert</li>
-                                    <li><span><i id="down-arrow"class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
-                                </ul>
-                            </div>
-                        </div>  
-                    </div>
-                    <!-- 2box main -->
-                    <div class="box-33">
-                        <div  class="offer">
-                            <h5><i class="fa-solid fa-people-group"></i> Team</h5>
                         </div>
-                        <div class="offer-information">
-                            <div>
-                                <h4>Advanced</h4>
-                                <small>€ 18.00</small>
-                                <small>/utente/mese</small>
+                        <!-- 2box main -->
+                        <div class="box-33">
+                            <div  class="offer">
+                                <h5><i class="fa-solid fa-people-group"></i> Team</h5>
                             </div>
-                            <div>
-                                <ul>
-                                    <li><span><i class="fa-solid fa-people-group"></span></i> 1 utente</li>
-                                    <li><span><i class="fa-solid fa-folder"></span></i> 5 TB di spazio di archiviazione sicuro</li>
-                                    <li><span><i class="fa-solid fa-share-nodes"></span></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
-                                </ul>
+                            <div class="offer-information">
+                                <div>
+                                    <h4>Advanced</h4>
+                                    <small>€ 18.00</small>
+                                    <small>/utente/mese</small>
+                                </div>
+                                <div>
+                                    <ul>
+                                        <li><span><i class="fa-solid fa-people-group"></span></i> 1 utente</li>
+                                        <li><span><i class="fa-solid fa-folder"></span></i> 5 TB di spazio di archiviazione sicuro</li>
+                                        <li><span><i class="fa-solid fa-share-nodes"></span></i> Funzioni di produttivita' premium e condivisione file semplice e sicura</li>
+                                    </ul>
+                                </div>  
+                                <div>
+                                    <button>Prova gratis per 30 giorni</button>
+                                    <p>oppure <a href="#">acquista ora</a></p>
+                                </div>
+                                <div>
+                                    <h6>Punti Salienti del piano</h6>
+                                    <ul>
+                                        <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Nessun limite di spazio per i file</li>
+                                        <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
+                                        <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Risparmio del 50% rispetto alle iscrizioni singole</li>
+                                        <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Possibilita' di inserire nuovi membri del team</li>
+                                        <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Gestione dei permessi in base ai ruoli</li>
+                                    </ul>
+                                </div>
                             </div>  
-                            <div>
-                                <button>Prova gratis per 30 giorni</button>
-                                <p>oppure <a href="#">acquista ora</a></p>
-                            </div>
-                            <div>
-                                <h6>Punti Salienti del piano</h6>
-                                <ul>
-                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Nessun limite di spazio per i file</li>
-                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
-                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Risparmio del 50% rispetto alle iscrizioni singole</li>
-                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Possibilita' di inserire nuovi membri del team</li>
-                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Gestione dei permessi in base ai ruoli</li>
-                                </ul>
-                            </div>
-                        </div>  
-                    </div>
-                    <!-- 3box main -->
-                    <div class="box-33">
-                        <div  class="offer">
-                            <h5><i class="fa-solid fa-hotel"></i></i> Azienda</h5>
                         </div>
-                        <div class="offer-information">
-                            <div>
-                                <h4>Enterprise</h4>
-                                <small>Contattaci</small>
-                                <small>-</small>
+                        <!-- 3box main -->
+                        <div class="box-33">
+                            <div  class="offer">
+                                <h5><i class="fa-solid fa-hotel"></i></i> Azienda</h5>
                             </div>
-                            <div>
-                                <ul>
-                                    <li><span><i class="fa-solid fa-people-group"></span></i> 10 o piu' utenti</li>
-                                    <li><span><i class="fa-solid fa-folder"></span></i> Soluzioni personalizzabili per la tua azienda</li>
-                                    <li><span><i class="fa-solid fa-share-nodes"></span></i> Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
-                                </ul>
+                            <div class="offer-information">
+                                <div>
+                                    <h4>Enterprise</h4>
+                                    <small>Contattaci</small>
+                                    <small>-</small>
+                                </div>
+                                <div>
+                                    <ul>
+                                        <li><span><i class="fa-solid fa-people-group"></span></i> 10 o piu' utenti</li>
+                                        <li><span><i class="fa-solid fa-folder"></span></i> Soluzioni personalizzabili per la tua azienda</li>
+                                        <li><span><i class="fa-solid fa-share-nodes"></span></i> Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
+                                    </ul>
+                                </div>  
+                                <div>
+                                    <button>Contattaci</button>
+                                    <p>oppure <a href="#">acquista ora</a></p>
+                                </div>
+                                <div>
+                                    <h6>Punti Salienti del piano</h6>
+                                    <ul>
+                                        <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
+                                        <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Servizio assistenza 24h</li>
+                                        <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Possibilita' di personalizzazione totale</li>
+                                    </ul>
+                                </div>
                             </div>  
-                            <div>
-                                <button>Contattaci</button>
-                                <p>oppure <a href="#">acquista ora</a></p>
-                            </div>
-                            <div>
-                                <h6>Punti Salienti del piano</h6>
-                                <ul>
-                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Cartelle offline su dispositivi mobili</li>
-                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Servizio assistenza 24h</li>
-                                    <li><span><i id="down-arrow" class="fa-solid fa-check"></span></i> Possibilita' di personalizzazione totale</li>
-                                </ul>
-                            </div>
-                        </div>  
+                        </div>
                     </div>
                 <!-- box orizzontale -->
                     <div class="orizzontal-box">
@@ -291,16 +293,16 @@
             <div class="flex">
                 <!-- prima colonna -->
                 <div class="column-partner flex">
-                    <div class="box-partner designit">
+                    <div class="box-partner designit flex">
                         <img src="img/designit.svg" alt="designit">
                     </div>
-                    <div class="box-partner arizona">
+                    <div class="box-partner arizona flex">
                         <img src="img/arizona_state_university.svg" alt="arizona_state_university">
                     </div>
-                    <div class="box-partner florida fix-padding ">
+                    <div class="box-partner florida fix-padding flex ">
                         <img  src="img/university_of_florida.svg" alt="university_of_florida">
                     </div>
-                    <div class="box-partner topps">
+                    <div class="box-partner topps flex">
                         <img  src="img/topps.svg" alt="topps">    
                     </div>   
                 </div>
@@ -321,16 +323,16 @@
                 <!--terza colonna -->
                 <!-- ho usato come tag i nomi delle aziende per comodita' -->
                 <div class="column-partner flex">
-                    <div class="box-partner world-bicycle">
+                    <div class="box-partner world-bicycle flex">
                         <img  src="img/world_bicycle_relief.svg" alt="world_bicycle_relief">
                     </div>
-                    <div class="box-partner hearst">
+                    <div class="box-partner hearst flex">
                         <img  src="img/hearst_corp.svg" alt="hearst">
                     </div>
-                    <div class="box-partner lonely">
+                    <div class="box-partner lonely flex">
                         <img  src="img/lonely_planet.svg" alt="lonely_planet">
                     </div>
-                    <div class="box-partner clear-channel">
+                    <div class="box-partner clear-channel flex">
                         <img src="img/clear_channel.svg" alt="clear_channel">    
                     </div>   
                 </div>
