--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section class="bottom-header-session">
             <div class="big-container">
                 <h1>Tutto cio' che ti serve per il lavoro, in un unico posto</h1>
-                <div class="flex img-header">    
+                <div class="flex box-bottom-header">    
                     <div class="box-30">
                         <p>Finalemnte tutti i tuoi strumenti,contenuti e collaboratori sono accessibili dallo stesso posto.Dropbox Business e' piu' di uno spazio di archiviazione sicuro: e' un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <div>
